# rag-haystack

./: .env  README.md  pyproject.toml
src/enterprise_rag_haystack.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/rag_haystack/apps/mcp_server/: server.py
src/rag_haystack/apps/rag_api/: config.py  main.py  pipelines.py  schemas.py  security.py
src/rag_haystack/libs/ingestion/: chunking.py  chunking_heading.py  loader.py  metadata.py  parser.py
src/rag_haystack/libs/retrieval/: gemini_composer.py  mcp_schema.py
tests/: test_metadata.py  test_security.py
